# com2com

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh
app/: CMakeLists.txt
app/tasks/: CMakeLists.txt
app/tasks/daemon/: task_daemon.c
app/tasks/fullduplex/: fullduplex_ops.c  task_fullduplex.c
app/tasks/fullduplex/inc/: fullduplex_ops.h
app/tasks/halfduplex/: halfduplex_ops.c  task_halfduplex.c
app/tasks/halfduplex/inc/: halfduplex_ops.h
app/tasks/inc/: tasks_def.h
app/utils/: CMakeLists.txt  resources.c  systicks.c
app/utils/inc/: resources.h  systicks.h
boards/win32/bsp/: CMakeLists.txt  bsp_com0.c  bsp_com1.c  bsp_tim0.c  bsp_tim1.c
boards/win32/config/: lib.cmake  options.h  tiny-sdk.cmake
boards/win32/config/port/: FreeRTOSConfig.h
boards/win32/src/: CMakeLists.txt  main.c
boards/win32/tasks/: CMakeLists.txt  interrupt_simulation.c
boards/win32/tools/: win32.cmake
components/: CMakeLists.txt
lib/windows/peripherals/: CMakeLists.txt
