# @file components\CMakeLists.txt
# @author HinsShum hinsshum@qq.com
# @date 2023/03/23 19:28:50
# @encoding utf-8
# @brief Here's the first line of every CMakeLists.txt,
#        which is the required name of the file CMake looks for:
cmake_minimum_required(VERSION 3.20)

if(DEFINED FREERTOS_BUILDIN)
add_subdirectory(freertos)
set(G_LIBS ${G_LIBS} freertos_kernel PARENT_SCOPE)
endif()

set(TINY_SDK_DIR ${CMAKE_CURRENT_SOURCE_DIR}/tiny-sdk)
set(INC_VPATH ${TINY_SDK_DIR}/inc ${TINY_SDK_DIR}/drv/inc)
set(CFILES ${TINY_SDK_DIR}/drv/device.c ${TINY_SDK_DIR}/drv/driver.c)
if(DEFINED AT24CXX)
    list(APPEND CFILES ${TINY_SDK_DIR}/drv/at24cxx.c)
endif()
if(DEFINED BUZZER)
    list(APPEND CFILES ${TINY_SDK_DIR}/drv/buzzer.c)
endif()
if(DEFINED D100)
    list(APPEND CFILES ${TINY_SDK_DIR}/drv/d100.c)
endif()
if(DEFINED DS28EXX)
    list(APPEND CFILES ${TINY_SDK_DIR}/drv/ds28exx.c)
endif()
if(DEFINED FLASH)
    list(APPEND CFILES ${TINY_SDK_DIR}/drv/flash.c)
endif()
if(DEFINED FM13DT160)
    list(APPEND CFILES ${TINY_SDK_DIR}/drv/fm13dt160.c)
endif()
if(DEFINED FM25QXX)
    list(APPEND CFILES ${TINY_SDK_DIR}/drv/fm25qxx.c)
endif()
if(DEFINED GPIO)
    list(APPEND CFILES ${TINY_SDK_DIR}/drv/gpio.c)
endif()
if(DEFINED I2C_BUS)
    list(APPEND CFILES ${TINY_SDK_DIR}/drv/i2c_bus.c)
endif()
if(DEFINED INFRARED)
    list(APPEND CFILES ${TINY_SDK_DIR}/drv/infrared.c)
endif()
if(DEFINED LED)
    list(APPEND CFILES ${TINY_SDK_DIR}/drv/led.c)
endif()
if(DEFINED YT8512X)
    list(APPEND CFILES ${TINY_SDK_DIR}/drv/motorcomm_yt8512x.c)
endif()
if(DEFINED MS523)
    list(APPEND CFILES ${TINY_SDK_DIR}/drv/ms523.c)
endif()
if(DEFINED MS8837)
    list(APPEND CFILES ${TINY_SDK_DIR}/drv/ms8837.c)
endif()
if(DEFINED RTC)
    list(APPEND CFILES ${TINY_SDK_DIR}/drv/rtc.c)
endif()
if(DEFINED SEPS525)
    list(APPEND CFILES ${TINY_SDK_DIR}/drv/seps525.c)
endif()
if(DEFINED SERIAL)
    list(APPEND CFILES ${TINY_SDK_DIR}/drv/serial.c)
endif()
if(DEFINED SI446X)
    list(APPEND CFILES ${TINY_SDK_DIR}/drv/si446x.c)
endif()
if(DEFINED SILKID)
    list(APPEND CFILES ${TINY_SDK_DIR}/drv/silkid.c)
endif()
if(DEFINED TIMER)
    list(APPEND CFILES ${TINY_SDK_DIR}/drv/timer.c)
endif()
if(DEFINED W1_BUS)
    list(APPEND CFILES ${TINY_SDK_DIR}/drv/w1_bus.c)
endif()
if(DEFINED WDT)
    list(APPEND CFILES ${TINY_SDK_DIR}/drv/wdt.c)
endif()
if(DEFINED ZAZXXX)
    list(APPEND CFILES ${TINY_SDK_DIR}/drv/zazxxx.c)
endif()
if(DEFINED CHECKSUM)
    list(APPEND INC_VPATH ${TINY_SDK_DIR}/common/checksum/inc)
    list(APPEND CFILES ${TINY_SDK_DIR}/common/checksum/checksum.c)
endif()
if(DEFINED DATA_CENTER)
    list(APPEND INC_VPATH ${TINY_SDK_DIR}/common/data_center/inc)
    list(APPEND CFILES ${TINY_SDK_DIR}/common/data_center/account.c)
    list(APPEND CFILES ${TINY_SDK_DIR}/common/data_center/data_center.c)
endif()
if(DEFINED HEAP)
    list(APPEND INC_VPATH ${TINY_SDK_DIR}/common/heap/inc)
    list(APPEND CFILES ${TINY_SDK_DIR}/common/heap/heap.c)
endif()
if(DEFINED KEY)
    list(APPEND INC_VPATH ${TINY_SDK_DIR}/common/key/inc)
    list(APPEND CFILES ${TINY_SDK_DIR}/common/key/key_processing.c)
endif()
if(DEFINED PARAMETERS)
    list(APPEND INC_VPATH ${TINY_SDK_DIR}/common/parameters/inc)
    list(APPEND CFILES ${TINY_SDK_DIR}/common/parameters/parameters.c)
endif()
if(DEFINED PINGPONG_BUFFER)
    list(APPEND INC_VPATH ${TINY_SDK_DIR}/common/pingpong_buffer/inc)
    list(APPEND CFILES ${TINY_SDK_DIR}/common/pingpong_buffer/pingpong_buffer.c)
endif()
if(DEFINED RESOURCE_MANAGER)
    list(APPEND INC_VPATH ${TINY_SDK_DIR}/common/resource_manager/inc)
    list(APPEND CFILES ${TINY_SDK_DIR}/common/resource_manager/resource_manager.c)
endif()
if(DEFINED SIMPLE_FIFO)
    list(APPEND INC_VPATH ${TINY_SDK_DIR}/common/simple_fifo/inc)
    list(APPEND CFILES ${TINY_SDK_DIR}/common/simple_fifo/simple_fifo.c)
    list(APPEND CFILES ${TINY_SDK_DIR}/common/simple_fifo/simple_queue.c)
    list(APPEND CFILES ${TINY_SDK_DIR}/common/simple_fifo/simple_message_buffer.c)
endif()
if(DEFINED SOFT_TIMER)
    list(APPEND INC_VPATH ${TINY_SDK_DIR}/common/soft_timer/inc)
    list(APPEND CFILES ${TINY_SDK_DIR}/common/soft_timer/soft_timer.c)
endif()
if(DEFINED UTILS)
    list(APPEND INC_VPATH ${TINY_SDK_DIR}/common/utils/inc)
    list(APPEND CFILES ${TINY_SDK_DIR}/common/utils/utils.c)
endif()
if(DEFINED XLOG)
    list(APPEND INC_VPATH ${TINY_SDK_DIR}/common/xlog/inc)
    list(APPEND CFILES ${TINY_SDK_DIR}/common/xlog/xlog.c)
endif()
if(DEFINED MAC_RADIO)
    list(APPEND INC_VPATH ${TINY_SDK_DIR}/common/media_access_control/radio/inc)
    list(APPEND CFILES ${TINY_SDK_DIR}/common/media_access_control/radio/radio_media_access_control.c)
    list(APPEND CFILES ${TINY_SDK_DIR}/common/media_access_control/radio/radio_transport_level.c)
endif()
if(DEFINED MAC_SERIAL)
    list(APPEND INC_VPATH ${TINY_SDK_DIR}/common/media_access_control/serial/inc)
    list(APPEND CFILES ${TINY_SDK_DIR}/common/media_access_control/serial/fullduplex_serial_media_access_contorl.c)
    list(APPEND CFILES ${TINY_SDK_DIR}/common/media_access_control/serial/halfduplex_serial_media_access_control.c)
    list(APPEND CFILES ${TINY_SDK_DIR}/common/media_access_control/serial/serial_media_access_control.c)
    list(APPEND CFILES ${TINY_SDK_DIR}/common/media_access_control/serial/serial_transport_level.c)
endif()

set(G_C_FILES ${G_C_FILES} ${CFILES} PARENT_SCOPE)
set(G_INC_VPATH ${G_INC_VPATH} ${INC_VPATH} PARENT_SCOPE)